<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:fitsSystemWindows="true"
    tools:context=".controller.ActivityLoginScreenController">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:alpha="0.6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="52dp"
                android:src="@drawable/house_icon"
                app:tint="@color/secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="32sp"
                android:textColor="@color/secondary" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/welcome"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_login_with_your_credentialsDot"
                    android:alpha="0.7"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/enterLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/done_icon"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <TextView
                    android:id="@+id/loginPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:alpha="0.7"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#B9B8B8"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/enterLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/password_icon"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    android:backgroundTint="@color/primary"
                    app:cornerRadius="32dp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/register"
                    app:backgroundTint="@color/secondary"
                    app:cornerRadius="32dp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
