<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:fitsSystemWindows="true"
    tools:context=".controller.ActivityLoginScreenController">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:alpha="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="52dp"
                android:src="@drawable/house_icon"
                app:tint="@color/secondary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="32sp"
                android:textColor="@color/secondary"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/welcome"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_info"
                    android:alpha="0.7"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/firstNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:drawableEnd="@drawable/done_icon"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/surnameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:drawableEnd="@drawable/done_icon"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/usernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:drawableEnd="@drawable/done_icon"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:alpha="0.7"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/done_icon"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:alpha="0.7"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#B9B8B8"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/password_icon"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textStyle="bold"
                    android:alpha="0.7"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#B9B8B8"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirmPasswordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/password_icon"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancelButtonRegister"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="3"
                        android:backgroundTint="@color/primary"
                        android:text="@string/cancel"
                        app:cornerRadius="32dp" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/registerButtonRegister"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/secondary"
                        android:text="@string/register"
                        android:layout_weight="2"
                        app:cornerRadius="32dp" />

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
