...
    <string name="ready_to_persist_new_mail">"Ready to persist new mail "</string>
    <string name="new_mails_not_matching">New mails not matching</string>
    <string name="wrong_current_mail">Wrong current mail</string>
    <string name="enter_name_for_cleaning_plan">Enter name for cleaning plan</string>
    <string name="select_date">Select Date</string>
    <string name="saved">Saved</string>
    <string name="please_login_with_your_created_credentials">Please login with your created credentials.</string>
    <string name="please_select_date_range">Please select a date range</string>
    <string name="done">done</string>
    <string name="delete">delete</string>
    <string name="enter_shorter_name">Please enter shorter name</string>
    <string name="enter_shorter_reason">Please enter shorter reason</string>
    <string name="select_users">Please select user(s)</string>
...
